--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,116 +1,49 @@
-// Reset 
-html{
-    box-sizing: border-box;
-    font-family: sans-serif;
-    font-size: 16px;
+@import "reset";
+
+body{
+    background-color: steelblue;
 }
 
-*,
-*:after,
-*:before{
-    padding: 0;
-    margin: 0;
-    box-sizing: inherit;
+img{
+    max-width: 100%;
+    height: 90%;
 }
-// End reset
+.wrapper{
+    width: 80%;
+    margin: 0 auto;
+    color: white;
+}
 
-$sliderItems: 3;
-$sliderTime: 10s;
-
-.page-title{
-    text-align: center;
-    line-height: 2;
+.flex-container{
+    padding: 2rem 10%;
     display: flex;
-    align-items: center;
-    width: 50%;
-    margin-right: auto;
-    margin-left: auto;
-
-    &::before, &::after{
-        content: "";
-        flex: auto;
-        height: .1em;
-        display: block;
-        
-    }
-
-    &::before{
-        margin-right: 0.5em;
-        background: linear-gradient(to right, steelblue, rgb(0, 255, 106));
-    }
-
-    &::after{
-        margin-left: 0.5em;
-        background: linear-gradient(to left, steelblue, rgb(0, 255, 106));
-    }
-    
+    flex-direction: column;
+    justify-content: center;
+    line-height: 1.4em;
 }
 
-.slider{
-    width: 50vw;
-    height: 80vh;
-    margin-right: auto;
-    margin-left: auto;
-
-    // Para que los elementos desaparezcan del contenido
-    overflow: hidden;
-    
-
+.title{
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
 }
 
-.slider__content{
-    // Para que los hijos se alinien uno al lado del otro
-    display: flex;
-    width: calc(100% * #{$sliderItems});
-    animation: slider #{$sliderTime} linear infinite;
-    position: relative;
-    left: 0;
-    
-}
-
-.slider__item{
-    position: relative;
-    width: 100%;
-}
-
-.slider__img{
-    width: 100%;
-    object-fit: cover;
+.image{
     display: block;
+    margin: auto;
+    text-align: center;
 }
 
-.slider__caption{
-    background-color: rgba(0,0,0,0.8);
-    color: #fff;
-    padding: 1em;
-    position: absolute;
-    bottom: -5em;
-    left: 1em;
-    animation: caption calc(#{$sliderTime} / #{$sliderItems}) linear infinite;
-}
+@media screen and (min-width: 64em){
+    .split-block{
+        display: flex;
+    }
 
-@keyframes slider{
-    0%, 30%{
-        left: 0%;
+    .split-block:first-child{
+        flex-direction: row-reverse; 
     }
-    33%, 63%{
-        left: -100%;
-    }
-    66%, 97%{
-        left: -200%;
+
+    .split-item{
+       flex: 1 1 50%;
     }
 }
-
- @keyframes caption{
-     0%, 15%{
-         opacity: 0;
-     }
-    20%, 90%{
-        bottom: 1em;
-        opacity: 1;
-    }
-
-    91%, 100%{
-        opacity: 0;
-    }
- }
