practice 7 - eccomerce widget

--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -13,3 +13,9 @@ html{
     box-sizing: inherit;
 }
 // End reset
+
+@import url('https://fonts.googleapis.com/css?family=Oswald:200,400,700');
+
+body{
+    font-family: 'Oswald', sans-serif;
+}
