--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Oswald:200,400,700");
 html {
   box-sizing: border-box;
   font-family: sans-serif;
@@ -11,42 +12,60 @@ html {
   box-sizing: inherit; }
 
 body {
-  background-color: steelblue; }
+  font-family: 'Oswald', sans-serif; }
 
-img {
-  max-width: 100%;
-  height: 90%; }
-
-.wrapper {
-  width: 80%;
-  margin: 0 auto;
-  color: white; }
-
-.flex-container {
-  padding: 2rem 10%;
+.product-grid {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  line-height: 1.4em; }
+  flex-wrap: wrap; }
 
-.title {
-  font-weight: bold;
-  font-size: 1.5rem;
-  margin-bottom: 1rem; }
-
-.image {
-  display: block;
-  margin: auto;
-  text-align: center; }
-
-@media screen and (min-width: 64em) {
-  .split-block {
-    display: flex; }
-
-  .split-block:first-child {
-    flex-direction: row-reverse; }
-
-  .split-item {
-    flex: 1 1 50%; } }
+.product {
+  background-color: #eee;
+  margin: 1em;
+  position: relative; }
+  .offer .product__tag {
+    display: block; }
+  .product__tag {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: yellow;
+    padding: 1em; }
+  .product__img {
+    width: 80%;
+    display: flex;
+    margin: 0 auto; }
+  .product__footer {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1em;
+    justify-content: center;
+    align-items: baseline; }
+    .product__footer::before {
+      content: "";
+      height: 1px;
+      border-bottom: 10px solid #ccc;
+      position: absolute; }
+  .product__title {
+    width: 60%;
+    font-size: 2em;
+    font-weight: 400; }
+  .product__price {
+    width: 40%;
+    text-align: right;
+    font-weight: 200; }
+    .product__price::before {
+      content: "$"; }
+    .product__price::after {
+      content: ".00"; }
+  .product__buy {
+    text-decoration: none;
+    background-color: red;
+    color: #fff;
+    display: inline-block;
+    padding: 0.5em 2em;
+    border-radius: 0.2em;
+    margin-top: 1em;
+    font-weight: 700; }
 
 /*# sourceMappingURL=style.css.map */
