--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,49 +1,86 @@
 @import "reset";
 
-body{
-    background-color: steelblue;
-}
-
-img{
-    max-width: 100%;
-    height: 90%;
-}
-.wrapper{
-    width: 80%;
-    margin: 0 auto;
-    color: white;
-}
-
-.flex-container{
-    padding: 2rem 10%;
+.product-grid{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    line-height: 1.4em;
+    flex-wrap: wrap;
 }
 
-.title{
-    font-weight: bold;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
+.product{
 
-.image{
-    display: block;
-    margin: auto;
-    text-align: center;
-}
+    background-color: #eee;
+    margin: 1em;
+    position: relative;
 
-@media screen and (min-width: 64em){
-    .split-block{
+    // Si tiene la clase offer se muestra con display block
+    .offer &__tag{
+        display: block;
+    }
+
+    &__tag{
+        display: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: yellow;
+        padding: 1em;
+    }
+
+    &__img{
+        width: 80%;
         display: flex;
+        margin: 0 auto;
+        // padding: 1em 0;
     }
 
-    .split-block:first-child{
-        flex-direction: row-reverse; 
+    &__footer{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 1em;
+        justify-content: center;
+        align-items: baseline;
+
+        &::before{
+            content: "";
+            height: 1px;
+            border-bottom: 10px solid #ccc;
+            position: absolute;
+        }
     }
 
-    .split-item{
-       flex: 1 1 50%;
+    &__title{
+        width: 60%;
+        font-size: 2em;
+        font-weight: 400;
     }
+
+    &__price{
+        width: 40%;
+        text-align: right;
+        font-weight: 200;
+
+        &::before{
+            content:  "$";
+        }
+
+        &::after{
+            content: ".00";
+        }
+    }
+    
+    &__title, &__price{
+        // border-bottom: 1px solid #ccc;
+    }
+
+    &__buy{
+        text-decoration: none;
+        background-color: red;
+        color: #fff;
+        display: inline-block;
+        padding: 0.5em 2em;
+        border-radius: 0.2em;
+        margin-top: 1em;
+        font-weight: 700;
+    }
+
+   
 }
