--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,86 +1,29 @@
 @import "reset";
 
-.product-grid{
+//Disclaimer: is not a good practice to have the mixins in the same file 
+//but for this little practice...
+@mixin centerBase{
     display: flex;
+
+    //vertical align
+    align-items: center; 
+
+    //horizontal align
+    justify-content: center; 
+}
+
+body{
+    min-height: 100vh;
+    @include centerBase;
+}
+
+.center{
+    @include centerBase;
     flex-wrap: wrap;
+    width: 25rem;
+    height: 25rem;
+    padding: 2rem;
+    color: white;
+    background-color: steelblue;
 }
 
-.product{
-
-    background-color: #eee;
-    margin: 1em;
-    position: relative;
-
-    // Si tiene la clase offer se muestra con display block
-    .offer &__tag{
-        display: block;
-    }
-
-    &__tag{
-        display: none;
-        position: absolute;
-        top: 0;
-        right: 0;
-        background-color: yellow;
-        padding: 1em;
-    }
-
-    &__img{
-        width: 80%;
-        display: flex;
-        margin: 0 auto;
-        // padding: 1em 0;
-    }
-
-    &__footer{
-        display: flex;
-        flex-wrap: wrap;
-        padding: 1em;
-        justify-content: center;
-        align-items: baseline;
-
-        &::before{
-            content: "";
-            height: 1px;
-            border-bottom: 10px solid #ccc;
-            position: absolute;
-        }
-    }
-
-    &__title{
-        width: 60%;
-        font-size: 2em;
-        font-weight: 400;
-    }
-
-    &__price{
-        width: 40%;
-        text-align: right;
-        font-weight: 200;
-
-        &::before{
-            content:  "$";
-        }
-
-        &::after{
-            content: ".00";
-        }
-    }
-    
-    &__title, &__price{
-        // border-bottom: 1px solid #ccc;
-    }
-
-    &__buy{
-        text-decoration: none;
-        background-color: red;
-        color: #fff;
-        display: inline-block;
-        padding: 0.5em 2em;
-        border-radius: 0.2em;
-        margin-top: 1em;
-        font-weight: 700;
-    }
-
-   
-}
