--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,21 +14,51 @@ html {
 body {
   font-family: 'Oswald', sans-serif; }
 
-body {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
+img {
+  width: 100%; }
 
-.center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 25rem;
-  height: 25rem;
-  padding: 2rem;
-  color: white;
-  background-color: steelblue; }
+.blog-post {
+  padding: 1em 2em; }
+
+.post {
+  padding-bottom: .5em;
+  margin-bottom: 2em;
+  border-bottom: 2px solid #ccc; }
+  .post__title {
+    margin-bottom: 0.5em; }
+  .post__link {
+    text-decoration: none;
+    color: #444; }
+    .post__link:hover {
+      text-decoration: underline; }
+  .post__img {
+    display: block;
+    margin-bottom: .5em; }
+  .post__tag {
+    color: #666;
+    margin-right: 1em;
+    text-decoration: none;
+    color: #444; }
+    .post__tag:hover {
+      text-decoration: underline; }
+  .post__tags {
+    display: flex;
+    margin-top: 1em;
+    margin-bottom: 0;
+    padding-left: 0;
+    list-style: none; }
+
+@media screen and (min-width: 768px) {
+  .post {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start; }
+    .post__title, .posttags {
+      width: 100%; }
+    .post__img {
+      width: 40%; }
+    .post__description {
+      width: 60%;
+      padding-left: 1em; } }
 
 /*# sourceMappingURL=style.css.map */
