--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,29 +1,80 @@
 @import "reset";
 
-//Disclaimer: is not a good practice to have the mixins in the same file 
-//but for this little practice...
-@mixin centerBase{
-    display: flex;
-
-    //vertical align
-    align-items: center; 
-
-    //horizontal align
-    justify-content: center; 
+img{
+    width: 100%;
 }
 
-body{
-    min-height: 100vh;
-    @include centerBase;
+.blog-post{
+    padding: 1em 2em;
 }
 
-.center{
-    @include centerBase;
-    flex-wrap: wrap;
-    width: 25rem;
-    height: 25rem;
-    padding: 2rem;
-    color: white;
-    background-color: steelblue;
+.post{
+
+    padding-bottom: .5em;
+    margin-bottom: 2em;
+    border-bottom: 2px solid #ccc;
+
+    &__title{
+        margin-bottom: 0.5em;
+    }
+
+    &__link{
+        text-decoration: none;
+        color: #444;
+
+        &:hover{
+            text-decoration: underline; 
+        }
+    }
+
+    &__img{
+        display: block;
+        margin-bottom: .5em;
+    }
+
+    &__description{
+
+    }
+
+    &__tag{
+        color: #666;
+        margin-right: 1em;
+
+        text-decoration: none;
+        color: #444;
+
+        &:hover{
+            text-decoration: underline;
+        }
+    }
+
+    &__tags{
+        display: flex;
+        margin-top: 1em;
+        margin-bottom: 0;
+        padding-left: 0;
+        list-style: none;
+    }
 }
 
+@media screen and (min-width: 768px){
+    .post{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+
+        &__title, &tags{
+            width: 100%;
+        }
+
+        &__img{
+            width: 40%;
+        }
+
+        &__description{
+            width: 60%;
+            padding-left: 1em;
+        }
+        
+    }
+}
