practice 10 - fixed header and footer

--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -14,8 +14,10 @@ html{
 }
 // End reset
 
-@import url('https://fonts.googleapis.com/css?family=Oswald:200,400,700');
+// @import url('https://fonts.googleapis.com/css?family=Oswald:200,400,700');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:200,400:700');
 
 body{
-    font-family: 'Oswald', sans-serif;
+    // font-family: 'Oswald', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
