--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Oswald:200,400,700");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu:200,400:700");
 html {
   box-sizing: border-box;
   font-family: sans-serif;
@@ -12,53 +12,29 @@ html {
   box-sizing: inherit; }
 
 body {
-  font-family: 'Oswald', sans-serif; }
+  font-family: 'Ubuntu', sans-serif; }
 
-img {
-  width: 100%; }
-
-.blog-post {
-  padding: 1em 2em; }
-
-.post {
-  padding-bottom: .5em;
-  margin-bottom: 2em;
-  border-bottom: 2px solid #ccc; }
-  .post__title {
-    margin-bottom: 0.5em; }
-  .post__link {
-    text-decoration: none;
-    color: #444; }
-    .post__link:hover {
-      text-decoration: underline; }
-  .post__img {
-    display: block;
-    margin-bottom: .5em; }
-  .post__tag {
-    color: #666;
-    margin-right: 1em;
-    text-decoration: none;
-    color: #444; }
-    .post__tag:hover {
-      text-decoration: underline; }
-  .post__tags {
+.app {
+  height: 100vh;
+  display: flex;
+  flex-direction: column; }
+  .app__main {
+    overflow-y: auto;
+    padding: 3rem 5%;
+    font-size: 1.5em;
+    background-color: #eee; }
+  .app__text {
+    padding-bottom: 2em;
+    font-size: 16px;
+    line-height: 1.4em;
+    text-align: justify; }
+  .app__header, .app__footer {
+    padding: 1rem;
+    height: 7rem;
+    background-color: steelblue;
+    color: white;
     display: flex;
-    margin-top: 1em;
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none; }
-
-@media screen and (min-width: 768px) {
-  .post {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start; }
-    .post__title, .posttags {
-      width: 100%; }
-    .post__img {
-      width: 40%; }
-    .post__description {
-      width: 60%;
-      padding-left: 1em; } }
+    align-items: center;
+    justify-content: center; }
 
 /*# sourceMappingURL=style.css.map */
