--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,80 +1,43 @@
 @import "reset";
 
-img{
-    width: 100%;
-}
+.app{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 
-.blog-post{
-    padding: 1em 2em;
-}
+    &__header{
 
-.post{
+    }
 
-    padding-bottom: .5em;
-    margin-bottom: 2em;
-    border-bottom: 2px solid #ccc;
+    &__main{
+        overflow-y: auto;
+        padding: 3rem 5%;
+        font-size: 1.5em;
+        background-color: #eee;
+    }
+
+    &__footer{
+
+    }
 
     &__title{
-        margin-bottom: 0.5em;
-    }
-
-    &__link{
-        text-decoration: none;
-        color: #444;
-
-        &:hover{
-            text-decoration: underline; 
-        }
-    }
-
-    &__img{
-        display: block;
-        margin-bottom: .5em;
-    }
-
-    &__description{
 
     }
 
-    &__tag{
-        color: #666;
-        margin-right: 1em;
-
-        text-decoration: none;
-        color: #444;
-
-        &:hover{
-            text-decoration: underline;
-        }
+    &__text{
+        padding-bottom: 2em;
+        font-size: 16px;
+        line-height: 1.4em;
+        text-align: justify;
     }
 
-    &__tags{
+    &__header, &__footer{
+        padding: 1rem;
+        height: 7rem;
+        background-color: steelblue;
+        color: white;
         display: flex;
-        margin-top: 1em;
-        margin-bottom: 0;
-        padding-left: 0;
-        list-style: none;
-    }
-}
-
-@media screen and (min-width: 768px){
-    .post{
-        display: flex;
-        flex-wrap: wrap;
-        align-items: flex-start;
-
-        &__title, &tags{
-            width: 100%;
-        }
-
-        &__img{
-            width: 40%;
-        }
-
-        &__description{
-            width: 60%;
-            padding-left: 1em;
-        }
-        
+        align-items: center;
+        justify-content: center;
     }
 }
