--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,27 +14,23 @@ html {
 body {
   font-family: 'Ubuntu', sans-serif; }
 
-.app {
-  height: 100vh;
+.grid-container {
   display: flex;
-  flex-direction: column; }
-  .app__main {
-    overflow-y: auto;
-    padding: 3rem 5%;
-    font-size: 1.5em;
-    background-color: #eee; }
-  .app__text {
-    padding-bottom: 2em;
-    font-size: 16px;
-    line-height: 1.4em;
-    text-align: justify; }
-  .app__header, .app__footer {
-    padding: 1rem;
-    height: 7rem;
-    background-color: steelblue;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
+  flex-wrap: wrap;
+  justify-content: space-between; }
+
+.grid-item {
+  width: 100%;
+  margin-bottom: 10px;
+  background: plum; }
+  .grid-item:nth-child(even) {
+    background: pink; }
+
+@media screen and (min-width: 480px) {
+  .grid-item {
+    width: calc(50% - 5px); } }
+@media screen and (min-width: 720px) {
+  .grid-item {
+    width: calc(33.3% - 6.6px); } }
 
 /*# sourceMappingURL=style.css.map */
