--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,43 +1,29 @@
 @import "reset";
 
-.app{
-    height: 100vh;
+.grid-container{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
-    &__header{
+.grid-item{
+    width: 100%;
+    margin-bottom: 10px;
+    background: plum;
 
+    &:nth-child(even){
+        background: pink;
     }
+}
 
-    &__main{
-        overflow-y: auto;
-        padding: 3rem 5%;
-        font-size: 1.5em;
-        background-color: #eee;
+@media screen and (min-width: 480px){
+    .grid-item{
+        width: calc(50% - 5px);
     }
+}
 
-    &__footer{
-
-    }
-
-    &__title{
-
-    }
-
-    &__text{
-        padding-bottom: 2em;
-        font-size: 16px;
-        line-height: 1.4em;
-        text-align: justify;
-    }
-
-    &__header, &__footer{
-        padding: 1rem;
-        height: 7rem;
-        background-color: steelblue;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+@media screen and (min-width: 720px){
+    .grid-item{
+        width: calc(33.3% - 6.6px);
     }
 }
