Practice 15 | Pricing table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,28 +14,53 @@ html {
 body {
   font-family: 'Ubuntu', sans-serif; }
 
-.title {
-  text-align: center;
-  margin: 1 rem auto; }
+.pricing-table {
+  background-color: #eee;
+  margin: 1em; }
+  .pricing-table__header {
+    text-align: center; }
+  .pricing-table__title {
+    background-color: #ddd;
+    padding: .5em 1em; }
+  .pricing-table__price {
+    font-size: 2.5em;
+    background-color: #bbb;
+    padding: 1em; }
+    .pricing-table__price::before {
+      content: "$"; }
+    .pricing-table__price::after {
+      content: ".00"; }
+  .pricing-table__features-container {
+    padding: 1em; }
+  .pricing-table__features {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    list-style: none; }
+  .pricing-table__feature {
+    padding: 1em;
+    border-bottom: 1px solid #ccc; }
+  .pricing-table__footer {
+    padding: 1em; }
+  .pricing-table__button {
+    display: block;
+    padding: 1em;
+    background-color: #888;
+    text-align: center;
+    color: #fff;
+    text-decoration: none; }
+    .pricing-table__button:hover {
+      background-color: #777; }
 
-.row {
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  margin: 1rem auto;
-  padding: 1rem;
-  background-color: steelblue; }
+@media screen and (min-width: 480px) {
+  .pricing-table-container {
+    display: flex;
+    flex-wrap: wrap; }
 
-.col {
-  background-color: deepskyblue;
-  padding: 1rem;
-  flex-basis: 47.5%;
-  display: flex;
-  flex-direction: column; }
-
-.text {
-  background-color: white;
-  padding: 1rem;
-  flex-grow: 1; }
+  .pricing-table {
+    width: calc(50% - 2em); } }
+@media screen and (min-width: 800px) {
+  .pricing-table {
+    width: calc(25% - 2em); } }
 
 /*# sourceMappingURL=style.css.map */
