--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,30 +1,78 @@
 @import "reset";
 
-.title{
-    text-align: center;
-    margin: 1 rem auto;
+.pricing-table{
+    background-color: #eee;
+    margin: 1em;
+
+    &__header{
+        text-align: center;
+    }
+
+    &__title{
+        background-color: #ddd;
+        padding: .5em 1em;
+    }
+
+    &__price{
+        font-size: 2.5em;
+        background-color: #bbb;
+        padding: 1em;
+
+        &::before{
+            content: "$";
+        }
+        &::after{
+            content: ".00"
+        }
+    }
+
+    &__features-container{
+        padding: 1em;
+    }
+
+    &__features{
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 0;
+        list-style: none;
+    }
+
+    &__feature{
+        padding: 1em;
+        border-bottom: 1px solid #ccc;
+    }
+
+    &__footer{
+        padding: 1em;
+    }
+
+    &__button{
+        display: block;
+        padding: 1em;
+        background-color: #888;
+        text-align: center;
+        color: #fff;
+        text-decoration: none;
+        &:hover{
+            background-color: #777;
+        }
+    }
+
 }
 
-.row{
-    display: flex;
-    justify-content: space-between;
-    // align-items: stretch;
-    width: 80%;
-    margin: 1rem auto;
-    padding: 1rem;
-    background-color: steelblue;
+@media screen and (min-width: 480px){
+    .pricing-table-container{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .pricing-table{
+        width: calc(50% - 2em);
+    }
 }
 
-.col{
-    background-color: deepskyblue;
-    padding: 1rem;
-    flex-basis: 47.5%;
-    display: flex;
-    flex-direction: column;
-}
-
-.text{
-    background-color: white;
-    padding: 1rem;
-    flex-grow: 1;
+@media screen and (min-width: 800px){
+    .pricing-table{
+        width: calc(25% - 2em);
+    }
 }
