Practice 16 - Example of a nav using flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,53 +14,51 @@ html {
 body {
   font-family: 'Ubuntu', sans-serif; }
 
-.pricing-table {
-  background-color: #eee;
-  margin: 1em; }
-  .pricing-table__header {
-    text-align: center; }
-  .pricing-table__title {
-    background-color: #ddd;
-    padding: .5em 1em; }
-  .pricing-table__price {
-    font-size: 2.5em;
-    background-color: #bbb;
-    padding: 1em; }
-    .pricing-table__price::before {
-      content: "$"; }
-    .pricing-table__price::after {
-      content: ".00"; }
-  .pricing-table__features-container {
-    padding: 1em; }
-  .pricing-table__features {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none; }
-  .pricing-table__feature {
-    padding: 1em;
-    border-bottom: 1px solid #ccc; }
-  .pricing-table__footer {
-    padding: 1em; }
-  .pricing-table__button {
+.header {
+  padding: 1rem;
+  text-transform: uppercase;
+  background-color: #81e0ca;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center; }
+  .header__img {
     display: block;
-    padding: 1em;
-    background-color: #888;
-    text-align: center;
-    color: #fff;
-    text-decoration: none; }
-    .pricing-table__button:hover {
-      background-color: #777; }
-
-@media screen and (min-width: 480px) {
-  .pricing-table-container {
+    max-width: 200px; }
+  .header__items {
+    list-style: none;
     display: flex;
-    flex-wrap: wrap; }
+    justify-content: space-between;
+    flex-direction: column; }
+  .header__item {
+    padding: .5rem 0;
+    text-align: center;
+    border-bottom: 1px solid white; }
+  .header__tools {
+    display: flex;
+    justify-content: space-between;
+    width: 7rem;
+    padding-top: .5em; }
+  .header__tool {
+    background-color: #00c094;
+    font-size: 2rem;
+    padding: .5rem;
+    border-radius: 50%; }
 
-  .pricing-table {
-    width: calc(50% - 2em); } }
-@media screen and (min-width: 800px) {
-  .pricing-table {
-    width: calc(25% - 2em); } }
+@media screen and (min-width: 600px) {
+  .header {
+    flex-direction: row; }
+    .header__nav {
+      flex-basis: 75%; }
+    .header__items {
+      flex-direction: row;
+      justify-content: space-between; }
+    .header__item {
+      border-bottom: 0; }
+    .header__img {
+      max-width: 150px; }
+    .header__tools {
+      flex-basis: 7%; } }
 
 /*# sourceMappingURL=style.css.map */
