--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,78 +1,85 @@
 @import "reset";
 
-.pricing-table{
-    background-color: #eee;
-    margin: 1em;
+.header{
+    padding: 1rem;
+    text-transform: uppercase;
+    background-color: #81e0ca;
+    color: white; 
 
-    &__header{
-        text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    &__logo{
+        
     }
 
-    &__title{
-        background-color: #ddd;
-        padding: .5em 1em;
-    }
-
-    &__price{
-        font-size: 2.5em;
-        background-color: #bbb;
-        padding: 1em;
-
-        &::before{
-            content: "$";
-        }
-        &::after{
-            content: ".00"
-        }
-    }
-
-    &__features-container{
-        padding: 1em;
-    }
-
-    &__features{
-        margin-top: 0;
-        margin-bottom: 0;
-        padding-left: 0;
-        list-style: none;
-    }
-
-    &__feature{
-        padding: 1em;
-        border-bottom: 1px solid #ccc;
-    }
-
-    &__footer{
-        padding: 1em;
-    }
-
-    &__button{
+    &__img{
         display: block;
-        padding: 1em;
-        background-color: #888;
+        max-width: 200px;
+    }
+
+    &__nav{
+
+    }
+
+    &__items{
+        list-style: none;
+        display: flex;        
+        justify-content: space-between;
+        flex-direction: column;
+
+    }
+
+    &__item{
+        padding: .5rem 0;
         text-align: center;
-        color: #fff;
-        text-decoration: none;
-        &:hover{
-            background-color: #777;
-        }
+        border-bottom: 1px solid white;
     }
 
-}
-
-@media screen and (min-width: 480px){
-    .pricing-table-container{
+    &__tools{
         display: flex;
-        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 7rem;
+        padding-top: .5em;
     }
 
-    .pricing-table{
-        width: calc(50% - 2em);
+    &__tool{
+        background-color: #00c094;
+        font-size: 2rem;
+        padding: .5rem;
+        border-radius: 50%;
     }
 }
 
-@media screen and (min-width: 800px){
-    .pricing-table{
-        width: calc(25% - 2em);
+.main{
+
+}
+
+@media screen and (min-width: 600px){
+    .header{
+        flex-direction: row;    
+
+        &__nav{
+            flex-basis: 75%;
+
+        }
+        
+        &__items{
+            flex-direction: row;
+            justify-content: space-between; 
+        }
+
+        &__item{
+            border-bottom: 0;
+        }
+        &__img{
+            max-width: 150px;
+        }
+
+        &__tools{
+            flex-basis: 7%;
+        }
     }
 }
